@@ -4,6 +4,7 @@ Form Maker changelog file
 Next Version
 - Removed deprecated .live() jQuery method - it's replaced by .on()
 - Make it possible to not display field identifier on form edit page
+- Confirmation page tempalte (summary_page.tpl) moved view directory
 
 Version 2.0.0
 - Created possibility to store user answers in database
